# Superpixel-Brain-Segmentation

./: PipelineOverview.txt  README  SPM_Notes.txt
SLICSuperpixelsAndSupervoxelsCode/SLICSuperpixels/: SLICSuperpixels.aps  SLICSuperpixels.vcproj
UGM/: mexAll.m
UGM/CRFcell/: .UGM_makeCRFmaps.m.swp  .UGM_makeCRFmapsC.c.swp  UGM_makeCRFmaps.m  UGM_makeCRFmapsC.c
UGM/infer/: .#UGM_Infer_LBP.m
UGM/mex/: UGM_CRF_NLLC.c  UGM_Decode_ICMC.c  UGM_LogConfigurationPotentialC.c
UGM/sub/: UGM_makeEdgeStruct.m
UGM/train/: #UGM_CRF_NLL.m#  UGM_CRF_NLL.m
contourRelaxedSuperpixels-0.1-r2/src/: Doxyfile.in
files/CRF/: CRF_test.m  CRF_train.m
files/SLIC/: .cropBlack.m.swp  SLIC_2DExact.m  SLIC_3DExact.m  runSLIC2DExact.m  runSLICExact.m
files/SVM/: README  SCpipeSVM.m  brainBlockSVM.m  svmCluster.m
other_software/: README
other_software/contourRelaxedSuperpixels-0.1-r2/src/: CMakeLists.txt  contourRelaxedSuperpixels.cpp
scripts/: AGS_SLIC.m  BadTissueList.txt  CRF2_2D.m  CRF2_ana1.m  CRF2_noMasking.m  CRFGM_fastTune.m  CRFGM_test.m  CRF_SPM.m  CRF_WML.m  CRF_adniEval.m  CRF_fastTune.m  CRF_paramEval.m  CRF_test.m  CRF_train.m  CRF_tune.m  CRF_v1OldTest.m  CRF_v1eval.m  CRF_v1test.m  CRFnoDist.m  CSVconcat.py  README  SLIC_2D.m  SLIC_2DExact.m  SLIC_3D.m  SLIC_3DExact.m  SLIC_CRF_test.m  SpectrallyCluster.m  addClass.py  averageResults.py  averageResults.txt  bashCdistNoPriors.sh  bashSLICnumIters.sh  bashSLICnumSuperVoxels.sh  bashSLICshapeParam.sh  batchAttempt1_job.m  batchCOREG_job.m  classifyPatient.m  compareIters.m  compareSLIC.m  concatCSV.py  (+52 more)
(+203 files in other folders)
